--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <script>
     var eventNames = ["event1", "event2", "event3", "event4", "event5", "event6", "event7", "event8"];
     var eventNamesIndex = -1;
-    var names
     var objectNames = ["objectA", "objectB", "objectC", "objectD", "objectE", "objectF", "objectG", "objectH"];  
     var ectNames = ["jectA", "jectB", "jectC", "jectD", "jectE", "jectF", "jectG", "jectH"];
+    var names = objectNames
    
          AFRAME.registerComponent("spheres", {
         init: function () {
