--- a/index.html
+++ b/index.html
@@ -666,8 +666,8 @@ AFRAME.registerComponent('thumb-movement-controls', {
     <a-plane class="clickable menu_plane" side="double" visible="false" color="green" position="0.7 0 -2" scale="1 0.5 0" rotation="-45 0 0" reverse mspheres></a-plane>
    <a-plane class="clickable menu_plane" side="double" visible="false" color="purple" position="-0.7 0 -2" scale="1 0.5 0" rotation="-45 0 0" reverse marticles></a-plane>
   
-   <a-plane class="clickable menu_plane" side="double" visible="false" position="-3 0 0" scale="1 0.5 0" rotation="-45 -90 0" forward></a-plane>
-   <a-plane class="clickable menu_plane" side="double" visible="false" position="3 0 0" scale="1 0.5 0" rotation="-45 90 0" forward></a-plane>
+   <a-plane class="clickable menu_plane" side="double" visible="false" color="teal" position="3 0 0" scale="1 0.5 0" rotation="-45 -90 0" forward></a-plane>
+   <a-plane class="clickable menu_plane" side="double" visible="false" position="-3 0 0" scale="1 0.5 0" rotation="-45 90 0" forward></a-plane>
    <a-plane class="clickable menu_plane" side="double" visible="false" position="0 0 3" scale="1 0.5 0" rotation="-45 -180 0" forward></a-plane>
    
    
@@ -719,4 +719,3 @@ AFRAME.registerComponent('thumb-movement-controls', {
       </a-scene>
   </body>
 </html>
-
