--- a/gravitygloves/index.html
+++ b/gravitygloves/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@5.0.0/dist/aframe-event-set-component.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/MignonBelongie/superframe@e716e89/components/thumb-controls/dist/aframe-thumb-controls-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-thumb-controls-component@2.0.0/dist/aframe-thumb-controls-component.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/aframehacknight/gravityglove@154b139/snapturn.js"></script>
     <script src="https://rawgit.com/protyze/aframe-curve-component/master/dist/aframe-curve-component.min.js"></script>
     <script src="https://rawgit.com/protyze/aframe-alongpath-component/master/dist/aframe-alongpath-component.min.js"></script>
