added persistence for hardcoded entities

--- a/postitnotes/persistentworld.html
+++ b/postitnotes/persistentworld.html
@@ -376,7 +376,7 @@ void main() {
               image: #aframewide; on: click" static-body class="clickable" side="double" visible="true" material="src: #aframesquare" position="-1 1.5 -4.5"
             scale="2 2 2" rotation="0 0 0" spheres
             start></a-box>
-      
+      <a-entity post-it="text: Move me and I'll remember, destroy me and I'll resurrect on reload." id="post-it-1" position="-0.4 1.9 -3.49"></a-entity>
       
       <a-entity class="clickable" mixin="cube" position="-2 3.265 -3" material="color: yellow" geometry="primitive: box; width: 0.33; height: 0.33; depth: 0.33"></a-entity>
       <a-entity class="clickable" mixin="cube" position="2 3.265 -3.5" material="color: red" geometry="primitive: box; width: 0.33; height: 0.33; depth: 0.33"></a-entity>
