--- a/aps/constraints-ammo.html
+++ b/aps/constraints-ammo.html
@@ -13,7 +13,7 @@
   <body>
     <a-scene environment physics="driver: ammo; debug: true">
       <a-entity id="cameraRig">
-        <a-camera wasd-controls look-controls raycaster="objects: [click]; far: 50" cursor="rayOrigin: mouse;"></a-camera>
+        <a-camera wasd-controls look-controls raycaster="objects: .click; far: 50" cursor="rayOrigin: mouse;"></a-camera>
         <a-entity teleport-controls="cameraRig: #cameraRig; button: trigger; type: line"
           ammo-body="type: kinematic"
           ammo-shape="type: box; halfExtents: 0.05 0.1 0.1; fit: manual;"
@@ -110,7 +110,7 @@
                radius="0.125"
                position="0 1 0"
                ammo-body ammo-shape
-               ammo-constraint="type: slider; target: #slider-target" click>
+               ammo-constraint="type: slider; target: #slider-target" class="click">
         </a-sphere>
         <a-cylinder radius="0.05" height="2" position="0 1 0" rotation="0 0 90"></a-cylinder>
       </a-entity>
