--- a/aps/constraints-ammo.html
+++ b/aps/constraints-ammo.html
@@ -15,7 +15,7 @@
   <body>
     <a-scene environment physics="driver: ammo; debug: true">
       
-      <a-mixin id="grab" geometry="primitive: box; width: 1; height: 1; depth: 1"
+      <a-mixin id="grab"
                  hoverable grabbable stretchable draggable droppable
                  shadow
                  event-set__dragdrop="_event: drag-drop; geometry.radius: 0.25; geometry.primitive: sphere"
