--- a/postitnotes/persistentworld-with-gui.html
+++ b/postitnotes/persistentworld-with-gui.html
@@ -2,7 +2,7 @@
   <head>
     <title>A-Frame WebXR Online Hacknight Gravity Gloves Component</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.js"></script>
-    <script src="../../aframe-gui/examples/js/aframe-gui.js"></script>
+    <script src="https://rawgit.com/rdub80/aframe-gui/master/dist/aframe-gui.min.js"></script>
     <script src="https://unpkg.com/super-hands/dist/super-hands.min.js"></script> 
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.2/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script>
