added link to persistentworld-with-gui.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <a href="postitnotes/persistentworld.html">postitnotes/persistentworld.html</a>
   Persistent world demo - contains post-it notes and other random objects that are persisted in a Google Firebase database.
   <br>
+  <a href="postitnotes/persistentworld-with-gui.html">postitnotes/persistentworld-with-gui.html</a>
+  Same as above but with some <a href="https://github.com/rdub80/aframe-gui">aframe-gui</a> components added.
+  <br>
   <a href="pipv/index.html">pipv/index.html</a>
   Instancing demo - uses THREE.InstancedBufferGeometry and THREE.DataTexture to implement instancing while maintaining per-instance per-vertex state.
   <br>
