--- a/GLBanireverse/GLBanireverse.html
+++ b/GLBanireverse/GLBanireverse.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GLBanireverse: The GLTF GLB Animation Control Example</title>
+    <title>GLBanireverse: The GLTF GLB Animation Mixer Reversible Control Example</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-extras@7.4.0/dist/aframe-extras.min.js"></script>
 </head>
