--- a/postitnotes/persistentworld.html
+++ b/postitnotes/persistentworld.html
@@ -13,8 +13,7 @@
     <script src="https://rawgit.com/protyze/aframe-alongpath-component/master/dist/aframe-alongpath-component.min.js"></script>
     <script type="text/javascript" src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/n5ro/Micah1.github.io@7022b232989831d0748167999c5ac2998fa0eeb2/scripts/pilaser.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
+    <script type="module">import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";</script>
     <script>
       var MAX_LOGS = null;
       function VR_LOG(data) {
