--- a/sinamark/sinamark.html
+++ b/sinamark/sinamark.html
@@ -63,6 +63,7 @@
 
     /* 2.4 Container Styling */
       .container {
+        font-family: 'Montserrat', sans-serif;
         max-width: 960px;
         margin: 20px auto;
         padding: 20px;
@@ -151,6 +152,7 @@
             <a href="#" class="nav" data-target="checkout">Checkout</a>
             <a href="#" class="nav" data-target="faq">FAQ</a>
             <a href="#" class="nav" data-target="blog">Blog</a>
+            <a href="#" class="nav" data-target="testimonials">Testimonials</a> <!-- New Testimonials Tab -->
             <a href="javascript:void(0);" class="language-toggle link">中文</a>
             <a href="javascript:void(0);" class="dark-mode-toggle link">Dark Mode</a>
         </nav>
@@ -169,8 +171,9 @@
 <div id="silk100" class="container"></div>
 <div id="sinasilk" class="container"></div>
 <div id="sinachar" class="container"></div>
+<div id="testimonials" class="container"></div> <!-- New Testimonials Container -->
 
     <!-- 4.0 Script Link -->
-    <script src="sinamark.js"></script>
+    <script src="txi.js"></script>
 </body>
 </html>
