--- a/sinamark/sinamark.html
+++ b/sinamark/sinamark.html
@@ -174,6 +174,6 @@
 <div id="testimonials" class="container"></div> <!-- New Testimonials Container -->
 
     <!-- 4.0 Script Link -->
-    <script src="txi.js"></script>
+    <script src="sinamark.js"></script>
 </body>
 </html>
