--- a/sinamark/sinamark.html
+++ b/sinamark/sinamark.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <!-- 1.0 Head Section -->
@@ -13,7 +13,7 @@
         margin: 0;
         padding: 0;
         width: 100%;
-        background-image: url('https://cdn.glitch.global/b524bd7c-2cd3-4f31-8a22-f1e9fa4b5a87/Screenshot%202024-05-06%20115200.jpg?v=1715021581494'); /* Tile this image */
+        background-image: url('https://cdn.glitch.com/b524bd7c-2cd3-4f31-8a22-f1e9fa4b5a87/Screenshot%202024-05-06%20115200.jpg?v=1715021581494'); /* Tile this image */
         background-repeat: repeat; /* Ensure the image tiles */
         overflow-x: hidden; /* Prevents horizontal scroll */
     }
@@ -137,10 +137,10 @@
     <div class="header">
         <header class="header">
             <!-- English Header Image -->
-            <img id="headerImageEN" src="https://cdn.glitch.global/b524bd7c-2cd3-4f31-8a22-f1e9fa4b5a87/logoEN.png?v=1715504163194"
+            <img id="headerImageEN" src="https://cdn.glitch.com/b524bd7c-2cd3-4f31-8a22-f1e9fa4b5a87/logoEN.png?v=1715504163194"
                  alt="SINAMARK Logo EN" style="max-width:100%; height:auto; display:block;">
             <!-- Chinese Header Image -->
-            <img id="headerImageCN" src="https://cdn.glitch.global/b524bd7c-2cd3-4f31-8a22-f1e9fa4b5a87/logoCN.png?v=1715504177038"
+            <img id="headerImageCN" src="https://cdn.glitch.com/b524bd7c-2cd3-4f31-8a22-f1e9fa4b5a87/logoCN.png?v=1715504177038"
                  alt="SINAMARK Logo CN" style="max-width:100%; height:auto; display:none;">
             <h1 id="headerTitle" style="display: none;">SINAMARK® - Excellent Dragon Mark</h1>
         
@@ -174,6 +174,6 @@
 <div id="testimonials" class="container"></div> <!-- New Testimonials Container -->
 
     <!-- 4.0 Script Link -->
-    <script src="sinamark.js"></script>
+    <script src="txp.js"></script>
 </body>
 </html>
