--- a/sinamark/sinamark.html
+++ b/sinamark/sinamark.html
@@ -195,6 +195,6 @@
     <div id="testimonials" class="container"></div> <!-- New Testimonials Container -->
 
     <!-- 4.0 Script Link -->
-    <script src="sinamark.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/v5ma/v5ma.github.io@latest/sinamark/sinamark.js"></script>
 </body>
 </html>
