--- a/starters/hide-environment-in-ar.html
+++ b/starters/hide-environment-in-ar.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>A-Frame XR: Hide Environment In AR</title>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
     <script>
-        // 1. Register the 'hide-environment-in-ar' component
-        AFRAME.registerComponent('hide-environment-in-ar', {
+        // 1. Register the 'lights-in-ar' component
+        AFRAME.registerComponent('lights-in-ar', {
             init: function () {
                 // 1.1 Initialize properties for the component
                 this.currentMode = null;
@@ -88,11 +88,11 @@
     </script>
 </head>
 <body>
-    <a-scene xr-mode-ui="XRMode: xr" background="color: white">
+    <a-scene xr-mode-ui="XRMode: xr">
         <!-- 6. Environment entity with preset configuration -->
-        <a-entity environment="preset: forest"></a-entity>
+        <a-entity environment="preset: forest" hide-on-enter-ar lights-in-ar></a-entity>
         <!-- 7. Background entity with 'hide-environment-in-ar' component -->
-        <a-entity background hide-environment-in-ar></a-entity>
+        
         <!-- 8. Basic shapes in the scene for visual interest -->
         <a-box scale="0.3 0.3 0.3" position="-0.25 0.85 -0.6" rotation="0 55 0" color="#4CC3D9"></a-box>
         <a-sphere position="0 1.05 -1" radius="0.3" color="#EF2D5E"></a-sphere>
