--- a/starters/lights-in-ar.html
+++ b/starters/lights-in-ar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>A-Frame XR: Hide Environment In AR</title>
+    <title>A-Frame XR: Light In AR when Environment Component is Hidden</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.3/dist/aframe-environment-component.min.js"></script>
     <script>
@@ -90,14 +90,14 @@
 <body>
     <a-scene xr-mode-ui="XRMode: xr">
         <!-- 6. Environment entity with preset configuration -->
-        <a-entity environment="preset: forest" hide-on-enter-ar lights-in-ar></a-entity>
-        <!-- 7. Background entity with 'hide-environment-in-ar' component -->
-        
+        <a-entity environment="preset: forest"  lights-in-ar></a-entity>
+        <!-- 7. note you could use hide-on-enter-ar inside the environment entity to hide it, but you won't have lights -->
         <!-- 8. Basic shapes in the scene for visual interest -->
         <a-box scale="0.3 0.3 0.3" position="-0.25 0.85 -0.6" rotation="0 55 0" color="#4CC3D9"></a-box>
         <a-sphere position="0 1.05 -1" radius="0.3" color="#EF2D5E"></a-sphere>
         <a-cylinder position="0.275 0.85 -0.6" radius="0.15" height="0.4" color="#FFC65D"></a-cylinder>
-        <a-plane position="0 0.70 -0.75" rotation="-90 0 0" width="1" height="1" color="#7BC8A4"></a-plane>
+        <a-box id="emerald" scale="1 0.01 1" position="0 0.7 -0.75" rotation="0 0 0"
+               material="color: #50C878; opacity: 0.5; metalness: 0.6;"></a-box>
     </a-scene>
 </body>
 </html>
